@@ -41,6 +41,7 @@
 - [#392] Improve feature: Show progress bar while opening pattern file.
 - [#732] Tape app. Improve Database dialog.
 - [#804] New feature. Import measurements from CSV file in Tape app.
+- [#414] Add features from Qt Windows Extras.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
